--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -3,3 +3,20 @@
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.musicContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.music {
+    display: flex;
+    flex-direction: column;
+
+    span {
+        margin-top: 20px;
+        font-size: 22px;
+    }
+}
