--- a/styles/music.module.scss
+++ b/styles/music.module.scss
@@ -150,6 +150,17 @@
         color: var(--color-gray-400);
     }
 
+    div {
+        width: 30px;
+        height: 30px;
+
+        border-radius: 100px;
+
+        margin-top: -50px;
+
+        background-color: #fff;
+    }
+
     button {
         margin: 20px;
 
